# atlas-search-indexing-compared

./: README.md  app.py  books.json  get_words.py  pyproject.toml  search_comparisons.py  vector_vs_text_search.py
ux/: App.jsx  VectorVisualizer.jsx  WordList.jsx  index.html  index.jsx  package.json
