[project]
name = "uv1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "kagglehub>=0.3.10",
    "langchain-huggingface>=0.1.2",
    "pandas>=2.2.3",
    "pymongo>=4.11.2",
    "rich>=13.9.4",
]
